Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -128,7 +128,7 @@ body {
 
 .widget {
     &.extendednavigation {
-        float: none;
+		float: none;
         position: relative;
         min-height: 50px;
         width: 90%;
@@ -155,7 +155,6 @@ body {
         }
         ul {
             max-width: 80%;
-            float: none;
             text-align: center;
             padding: 0;
             @media @tablet {
